modifying style file

--- a/Login-Signup-PDO-OOP/style.css
+++ b/Login-Signup-PDO-OOP/style.css
@@ -9,7 +9,7 @@ body{
     max-width: 500px;
     padding: 19px 29px 29px;
     margin: 0 auto;
-	//margin-top:90px;
+    /*margin-top:90px;*/
     background-color: #fff;
 	
     border: 1px solid #e5e5e5;
