--- a/Login-Signup-PDO-OOP/style.css
+++ b/Login-Signup-PDO-OOP/style.css
@@ -38,7 +38,7 @@ body{
 
 .signin-form, .body-container
 {
-	//border:solid red 1px;
+	/*border:solid red 1px;*/
 	margin-top:110px;
 }
 .navbar-brand{
